--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a onclick="Display('About')">About</a></li>
                 <li><a>links</a>
                     <ul class="Nav">
-                        <li><a href="https://github.com/Bharath33-Krishnan" target="_blank">Git-Hub</a></li>
+                        <li><a href="https://github.com/Bharath33-Krishnan" target="_blank">GitHub</a></li>
                         <li><a href="https://bharathk33.itch.io/" target="_blank">Itch</a></li>
                     </ul>
                 </li>
